--- a/PanCalculator/Base.lproj/Main.storyboard
+++ b/PanCalculator/Base.lproj/Main.storyboard
@@ -214,10 +214,13 @@
                                     <action selector="resultAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fyC-Sf-HN2"/>
                                 </connections>
                             </button>
-                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" stepValue="15" translatesAutoresizingMaskIntoConstraints="NO" id="Khw-uw-6jI">
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="48" maximumValue="100" stepValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="Khw-uw-6jI">
                                 <rect key="frame" x="249" y="182" width="94" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.93725490196078431" green="0.28235294117647058" blue="0.13725490196078433" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="resizeLabel:" destination="BYZ-38-t0r" eventType="valueChanged" id="1fu-Jz-btU"/>
+                                </connections>
                             </stepper>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
